@@ -8,7 +8,7 @@ class Tag < ActiveRecord::Base
 
   # Model Validation
   validates_presence_of :name, :project_id
-  validates_uniqueness_of :name, scope: :project_id
+  validates_uniqueness_of :name, scope: [:deleted, :project_id]
 
   # Model Relationships
   belongs_to :user
